--- a/source/assets/scss/base/_fonts.scss
+++ b/source/assets/scss/base/_fonts.scss
@@ -13,6 +13,11 @@
   font-weight: 400;
 }
 
+.open-sans-semi-bold{
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 500;
+}
+
 .open-sans-bold{
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
