--- a/source/assets/scss/base/_variables.scss
+++ b/source/assets/scss/base/_variables.scss
@@ -21,3 +21,16 @@ $grey: $border-color;
 $selected: #bbb;
 $focus: #719ece;
 $disabled: #d8dada;
+
+
+.fc--aqua{
+  color: #00aeef;
+}
+
+.fc--lg{
+  color: #bbbbbb;
+}
+
+.fc--mg{
+  color: #5c6770;
+}
