--- a/source/assets/scss/styles.scss
+++ b/source/assets/scss/styles.scss
@@ -23,6 +23,7 @@
     // );
     @include foundation-typography;
     @include foundation-visibility-classes;
+    @include foundation-responsive-embed;
 
 //  ==========================================================================
 //  Vendor, from Bower and Vendor
