--- a/source/views/partials/logo.hbs
+++ b/source/views/partials/logo.hbs
@@ -10,7 +10,7 @@
 	<g>
 		<g>
 			<g>
-				<path class="st0" d="M114.7,114.3L0,56.8L114.7,0V114.3z M6.9,56.8l104.8,52.6V4.9L6.9,56.8z"/>
+				<path class="st0 stt4" d="M114.7,114.3L0,56.8L114.7,0V114.3z M6.9,56.8l104.8,52.6V4.9L6.9,56.8z"/>
 			</g>
 			<path class="st1" d="M62.7,11h-2.9c7.8,12.1,12.6,28,12.6,45.5c0,17.2-4.6,33-12.2,44.9h3.2C74.8,91,82.1,74.8,82.1,56.5
 				C82.1,37.9,74.5,21.4,62.7,11z"/>
