--- a/source/assets/scss/modules/_main-nav.scss
+++ b/source/assets/scss/modules/_main-nav.scss
@@ -1,7 +1,25 @@
 .main-nav{
-  padding: 0;
-  margin: 0px;
-  position: relative;
+  position: absolute;
+  top:100%;
+  width: 100%;
+  background: white;
+  left: 0;
+  border-top: 1px solid #eee;
+  padding: .5rem 0;
+  margin: 0;
+  visibility: hidden;
+  @include breakpoint(medium down){
+    &.isActive{
+      visibility: visible;
+    }
+  }
+  @include breakpoint(large up){
+    padding: 0;
+    margin: 0px;
+    position: relative;
+    visibility: visible;
+    width: auto;
+  }
 }
 
 .main-nav li{
@@ -10,37 +28,61 @@
   a{ color: #4e5d67; }
   a:hover{ color: #00aeef;}
   &.isActive, &.isActive a{ font-weight: 600; }
+  @include breakpoint(medium down){
+    width: 100%;
+    text-align: center;
+  }
 }
 
 .main-nav > li{
   display: inline-block;
   position: relative;
-  + li { margin-left: 1rem; }
+  padding: 0 .5rem;
+  @include breakpoint(medium up){
+    padding: inherit;
+    + li { margin-left: .5rem; }
+  }
 }
 
 .main-nav > li:not(:last-child) > a{
-  padding: 30px 20px;
+  padding: 10px;
+  width: 100%;
+  @include breakpoint(medium up){
+    padding: 30px 20px;
+  }
   display: inline-block;
   i { margin-left: 10px; }
   &:hover{ background: #f8f8f8; }
 }
 
 .main-nav > li:last-child a{
+  width: 100%;
+  @include breakpoint(medium up){
+    width: auto;
+  }
   background: #00aeef;
   color: white;
   padding: 15px 40px;
   border-radius: 40px;
+  display: inline-block;
   &:hover{ background: darken(#00aeef, 10%); }
 }
 
 .main-nav li ul{
-  position: absolute;
-  top: calc(100% + 1px);
-  left: -20px;
-  display: none;
-  z-index: -1;
-  box-shadow: 0px 2px 4px #bbb;
+  display: inline-block;
+  margin: 0;
+  width: 100%;
   background: white;
+  @include breakpoint(medium up){
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: -1;
+    box-shadow: 0px 2px 4px #bbb;
+    border-top:1px solid #eee;
+    width: auto;
+  }
 }
 
 .main-nav li:hover{
@@ -53,11 +95,36 @@
   clear: left;
   display: inline-block;
   width: 100%;
+  &:last-child{
+    margin-bottom: -10px;
+  }
+  @include breakpoint(medium up){
+    &:last-child{ margin-bottom: 0; }
+  }
 }
 
 .main-nav li ul li a{
-  padding: 15px 20px;
+  padding: 10px;
+  @include breakpoint(medium up){
+    padding: 15px 20px;
+  }
   white-space: nowrap;
   display: inline-block;
   width: 100%;
+}
+
+.mobile-nav-toggle{
+  background: transparent;
+  color: #444;
+  box-shadow: inset 0px 0px 10px #eee;
+  &:hover{ color: white; background: #00aeef; }
+  &.isActive{
+    background: #00aeef;
+    color: white;
+    i {
+      &::before{
+        content: "\f00d";
+      }
+    }
+  }
 }
