--- a/source/views/partials/head.hbs
+++ b/source/views/partials/head.hbs
@@ -1,7 +1,11 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>{{title}} | {{heading}}</title>
+{{#if home}}
+  <title>{{title}} | Meet a new kind of imaging device</title>
+  {{else}}
+  <title>{{title}} | {{heading}}</title>
+{{/if}}
 
 <meta name="description" content="{{description}}">
 <meta name="keywords" content="TODO">
@@ -12,10 +16,29 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="format-detection" content="telephone=no">
 
+<meta property="og:site_name" content="Vayyar | Meet a new kind of imaging device"/>
+<meta property="og:image" content="http://vayyar.com/assets/images/og-img.jpg"/>
+<meta property="og:title" content="Vayyar | Meet a new kind of imaging device"/>
+<meta property="og:url" content="http://vayyar.com{{canon}}"/>
+<meta property="og:type" content="website"/>
+
+<meta name="google-site-verification" content="MFl-PG9-xQuKPaCBFVWxXV280U458F57HLF3PYN--Y8"/>
+
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Roboto:400,700" rel="stylesheet">
 <link rel="stylesheet" href="/assets/css/styles.css">
 
 <script src="/assets/js/modernizr-bundle.js"></script>
+
+<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	ga('create', 'UA-48339662-1', 'vayyar.com');
+	ga('send', 'pageview');
+
+</script>
 
 <!--[if lte IE 9]>
 <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
